force-app/main/default/objects/Device_LargeCategory__c/Device_LargeCategory__c.object-meta.xml
<CustomObject>
    <label>工種</label>
    <nameField>
        <label>工種名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>