force-app/main/default/objects/Device_LargeCategory__c/fields/ConstructionZone__c.field-meta.xml
<CustomField>
    <fullName>ConstructionZone__c</fullName>
    <label>工区</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>対象の見積に属さない工区を選択しています。
選択し直してください。</errorMessage>
        <filterItems>
            <field>$Source.Quote__c</field>
            <operation>startsWith</operation>
            <valueField>ConstructionZone__c.Quote__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ConstructionZone__c</referenceTo>
    <relationshipLabel>工種</relationshipLabel>
    <relationshipName>Device_LargeCategorys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>