force-app/main/default/objects/Device_LargeCategory__c/fields/Device_LargeCategoryNo__c.field-meta.xml
<CustomField>
    <fullName>Device_LargeCategoryNo__c</fullName>
    <label>工種No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>