force-app/main/default/objects/Device_LargeCategory__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>自動計算で入る項目になります。</inlineHelpText>
    <label>見積</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>工種</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>